=================
Changes for Crate
=================

Unreleased
==========

2015/12/02 0.53.1
=================

 - Updated Crash to 0.14.3, which includes the following change:

   - Python2.6/2.7 output now prints unicode strings correctly when using
     csv output format

 - Improved the speed of group by queries which contain tables with more
   than 1 shard per node.

 - Updated crate-admin to 0.16.1 which includes following changes:

   - fix: column headers where not shown in result table on console page
     when two or more columns with the same name were selected

 - Fix: insert into a partitioned primary key column of type long
   could fail under some circumstances

 - Fix: missing characters when concatenating string under some
   rare circumstances

 - Internal optimization: Avoid writing partition values to the source.

 - Updated crate certificates in the ssl truststore.

 - Fixed an issue that could cause bulk update requests to fail if the
   ``bulkArgs`` contained only one item

2015/11/16 0.53.0
=================

 - Updated crate-admin to 0.16.0 which includes following changes:

   - The table list is now fully searchable and sorted by table name within
     its schemas.

   - fix: charts are not correctly displayed in Microsoft Edge browser.

   - UDC: identify anonymous user with cluster id.
     Both user id and cluster id are anonymous traits.
     Note: You can disable UDC via the `udc.enabled` setting on the Crate server.

 - implement ``intersects`` scalar function

 - fix: properly restrict partitioned by columns to primitive types
        during analysis

 - added functionality to index and match geo shapes

 - restrict WITHIN function to only accept geo_point (and compatible types)
   as first argument

 - Added snapshot and restore functionality

 - Changed crate launch scripts to no longer support extending the
   CRATE_CLASSPATH environment variable

 - Added initial limited cross and inner join support
