@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - The ``jobs.keep_alive_timeout`` value can now be configured and the default
+   has been changed to 0 (deactivated) from ``5m``
+
 2015/12/02 0.53.1
 =================
 
